# tg_organazer

./: .gitignore  .pre-commit-config.yaml  README.md  README.ru.md  alembic.ini  calendar_utils.py  config.py  cron_handler.py  datetime_selector.py  entities.py  i18n.py  main.py  max_bot.service  models.py  pyproject.toml  tg_bot.service  weather.py
.github/workflows/: deploy.yml  deploy_test.yml  merge.yml
api/: .env.example  package.json
api/src/: app.module.ts  main.ts
database/: db_controller.py  session.py
database/models/: event_models.py  note_model.py  user_model.py
handlers/: cal.py  contacts.py  events.py  link.py  notes.py  start.py
max_bot/: client.py  compat.py  context.py  main.py  state.py  update_parser.py
max_bot/handlers/: cal.py  contacts.py  events.py  notes.py  start.py
migrations/: env.py
migrations/versions/: 2025-12-25_40f0ebcec7ce_events.py  2025-12-25_7924039747c1_add_user_table.py  2025-12-26_4bde7e73ae98_year_month.py  2025-12-28_d7da916f3250_init.py  2025-12-31_13e7c7c52f38_user_relation.py  2026-01-04_aee9c4d4e797_init.py  2026-01-04_e029bdacceb8_bit_int.py  2026-01-05_87425c7b59df_user_tz.py  2026-01-05_d06c961d501b_user_tz.py  2026-01-07_3b8b7a30f212_big_int_for_event.py  2026-01-07_e32bd3dd1d45_timezone.py  2026-01-19_a1b2c3d4e5f6_event_participants.py  2026-01-20_f1a2b3c4d5e6_event_emoji.py  2026-01-29_b7c8d9e0f1a2_event_creator.py  2026-02-01_c1d2e3f4a5b6_max_ids.py  (+4 more)
tests/: conftest.py  fakes.py  test_db_controller.py  test_handlers.py  test_weather.py
web/: .env.example  vite.config.js
web/src/: App.css  App.jsx  (+3 more)
(+20 files in other folders)
