[project]
name = "tg-organazer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.17.2",
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.5",
    "ruff>=0.14.10",
    "sqlalchemy>=2.0.45",
]

[tool.ruff]
exclude = [
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    ".ruff_cache",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "venv",
    "readme.md",
    "migrations"
]

line-length = 140
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    # "B",  # flake8-bugbear
    # "C4", # flake8-comprehensions
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "S",  # flake8-bandit
    "W",  # pycodestyle warnings
    # "SIM",
    # "UP", # pyupgrade
]
# ignore = ["B008"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/{tests,docs,tools}/*" = ["E402", "F401", "F811", "R504", "ANN001", "ANN201", "F841", "S101"]
"**/{migrations}/*" = ["I001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
